fix discussion window overlap, fix not including recommendation boundary values, fix satisfactory range colors

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -85,6 +85,10 @@ section.discussion.discussion-hidden .discussion-toggle {
     display: initial;
 }
 
+section.discussion.discussion-hidden{
+    z-index: -99;
+}
+
 .vessel-flag {
     width: 28px;
     height: 28px;
